# space-dregs

./: .gitignore  CHANGELOG  CHANGELOG.md  CMakeLists.txt  Doxyfile  README.md  shell.html
.github/workflows/: package.yml
assets/: dialogue.txt
cmake/: GitVersion.cmake  Info.plist
icons/: SpaceDregs.icns  icon.rc
src/: app.h  asteroid.c  asteroid.h  audio.c  audio.h  bullet.c  bullet.h  chunks.c  chunks.h  components.h  config.c  config.h  dialogue.c  dialogue.h  distress.c  distress.h  draw.h  ecs.c  ecs.h  events.c  events.h  faction.c  faction.h  font.c  font.h  fx.c  fx.h  glow.c  glow.h  hud.c  hud.h  input.c  input.h  main.c  math2d.h  menu.c  menu.h  mine.c  mine.h  missile.c  (+25 more)
